@@ -1114,6 +1114,20 @@ Cancels all tell message sending in or to the room, area, or mob.  \
 You can also add this to player mobs as punishment or to shut them up. \
 Admins are exempt from the restrictions imposed.
 
+PROP_OPENCOMMAND=\
+Property   : Prop_OpenCommand\n\r\
+Targets    : Containers, Exits\n\r\
+Parameters : [COMMAND WORD] ([PARMS...];...\n\r\
+Example    : twist knob;tw knob;twi knob\n\r\
+Example    : smack botto*\n\r\
+Description: \n\r\
+When applied to a locked container or exit, this property will force \
+the affected openable to unlock and open when the command phrase is entered \
+by the user in its presence.  The command word must match exactly, and the \
+command entered must otherwise be completely invalid.  PARMS arguments must also \
+match exactly, although any PARM arg may end with * to use a starting string wildcard. \
+A PARM argument may also end with ** to match the rest of the users entered command string.
+
 PROP_OPENPASSWORD=\
 Property   : Prop_OpenPassword\n\r\
 Targets    : Containers, Exits\n\r\
